--- a/trail-conditions-app/src/main/res/values/strings.xml
+++ b/trail-conditions-app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="twitter">Twitter</string>
     <string name="mountain_project">Mountain Project</string>
   <string name="website">website</string>
+    <string name="markdown_error">Error loading text, check your network connection and try again.</string>
 </resources>
